# antares-filter-slackbots

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prepare_project.sh  PROST.csv  README.md  pyproject.toml
.github/workflows/: smoke-test.yml  testing-and-coverage.yml
data/: PROST.csv  PROST_TNS.csv  PROST_YSE.csv  PROST_archival.csv  PROST_relaxed.csv  PROST_temp.csv  PROST_test.csv  archival_yse_candidates.csv  model_superphot_svi_LightGBM_None_False_25_None_10_100_42_early.pt  superphot-plus_loci.csv  voting_history.csv
data/LAISS_anomalies/: loci.csv  merged_votes_no_repeats.csv  merged_votes_with_repeats.csv  table.html  voting_history.csv
data/archival_prost_catalogs/: PROST_old2.csv  PROST_old3.csv
data/atlas_superphot-plus/: loci.csv  table.html  voting_history.csv
data/ghost/: all_new_hosts.csv  ghost_archival2.csv
data/nuclear-transients/: loci.csv  voting_history.csv
data/nuclear_transients/: loci.csv  table.html  voting_history.csv
data/precursor_emission/: loci.csv
data/query-atlas/: loci.csv  voting_history.csv
data/query-tns/: loci.csv
data/query-yse/: loci.csv  voting_history.csv
data/shapley/: shapley_descriptions.yaml
data/superphot-plus/: loci.csv  table.html  voting_history.csv
data/superphot-plus-bright/: loci.csv  voting_history.csv
data/superphot-plus_bright/: loci.csv  table.html  voting_history.csv
data/tns_precursor/: loci.csv  table.html
data/yse/: loci.csv
data/yse_candidates/: loci.csv  table.html  voting_history.csv
src/antares_filter_slackbots/: __init__.py  antares_ranker.py  archival_merges.py  associated_transient_catalog_1740777294.csv  associated_transient_catalog_1740777438.csv  constants.py  locus_generation.py  quality_filters.py  retrievers.py  run.py  slack_formatters.py  slack_requests.py  webpage.py  wsgi.py  yse_archival_query.py
src/archival/: getLabeledAGN.py  get_AD_hosts.py  helper_functions.py  laiss_functions.py
tests/: conftest.py  fakes.py
(+28 files in other folders)
