[project]
name = "antares-filter-slackbots"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Kaylee de Soto", email = "kmd6851@psu.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
dependencies = [
    "absl-py",
    "alerce", # retrievers
    "antares-client @ git+https://gitlab.com/nsf-noirlab/csdc/antares/client.git", # retrievers
    "astro-prost @ git+https://github.com/kdesoto-astro/Prost.git",
    "astropy",
    "devkit2_poc @ git+https://gitlab.com/nsf-noirlab/csdc/antares/devkit2_poc.git",
    "dill",
    "django", # retrievers
    "dustmaps",
    "dynesty>=2.1.5",
    "extinction",
    "Flask",
    "iinuclear @ git+https://github.com/gmzsebastian/iinuclear.git",
    "Jinja2",
    "lightgbm>=4.6.0",
    "MarkupSafe",
    "matplotlib",
    "multiprocess",
    "numpy <= 1.26.3",
    "numpyro",
    "opt-einsum",
    "pandas",
    "protobuf",
    "pyerfa",
    "pyyaml",
    "scipy",
    "shap",
    "slack-bolt",
    "slack-sdk",
    "snapi @ git+https://github.com/kdesoto-astro/snapi.git", # retrievers
    "superphot-plus @ git+https://github.com/VTDA-Group/superphot-plus.git", # filter
    "threadpoolctl",
    "torch",
]

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
